syntax = "proto3" ;
package chain ;

option go_package = "github.com/adithyabhatkajake/libsynchs/chain" ;

import "chain/command.proto" ;

message BlockData {
    // Index of the block
    uint64 Index = 1 ;
    // Hash Pointer
    bytes PrevHash = 2 ;
    // commands
    repeated chain.Command Cmds = 3 ;
}

message Block {
    chain.BlockData Data = 1 ;
    // Block hash
    bytes BlockHash = 2 ;
    // Decision: Has it been accepted yet?
    bool Decision = 3 ;
    // Proposer 
    uint64 Proposer = 4 ;
    // Proposer signature
    bytes Signature = 5 ;
}