syntax = "proto3" ;
package msg ;

option go_package = "github.com/adithyabhatkajake/libsynchs/msg" ;

import "chain/block.proto" ;

message CommitAck {
    chain.ProtoBlock Block = 1 ; // The hash of the command that is being acknowledged
}